--- a/src/componentes/Card/style.css
+++ b/src/componentes/Card/style.css
@@ -1,6 +1,30 @@
-.card{
-    width: 250px;
-    background-color: rgb(248, 194, 44);
-    border-radius: 5px;
-    border: 1px solid #808080;
+.card {
+  width: 250px;
+  background-color: var(--vermelho);
+  border-radius: 5px;
+  border: 1px solid #808080;
+  margin: 20px;
+}
+
+.card-caixa-imagem {
+  background-color: var(--azul);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.card-imagem {
+  width: 70%;
+}
+
+.card-caixa-especificacoes{
+  margin: 10px;
+  padding: 10px;
+  background-color: #FF6347;
+}
+
+.primeira-maiuscula{
+  text-transform: capitalize;
 }
